update module position

--- a/src/app/components/layout/censor-job-post/censor-job-post.component.html
+++ b/src/app/components/layout/censor-job-post/censor-job-post.component.html
@@ -117,9 +117,9 @@
                             <div class="clear-fix"></div>
                            
                             <div class="col-sm-4 text-right">
-                                <button  type="button" class="btn btn-default">Phê duyệt</button>
+                                <button  type="button" class="btn btn-info">Phê duyệt</button>
                                 &nbsp;
-                                <button  type="button" class="btn btn-danger">Xóa</button>
+                                <button  type="button" class="btn btn-danger">Từ chối</button>
                               </div>
                         </div>
 
