update module account

--- a/src/app/components/layout/change-password/change-password.component.css
+++ b/src/app/components/layout/change-password/change-password.component.css
@@ -2,3 +2,11 @@
     width: 75%;
     margin:  15px auto;
 }
+
+.text-validate {
+    font-size: 12px;
+    font-style: italic;
+    color: orangered;
+    margin-top: -15px;
+    margin-bottom: 20px;
+}
