--- a/src/app/components/layout/change-password/change-password.component.html
+++ b/src/app/components/layout/change-password/change-password.component.html
@@ -18,48 +18,45 @@
                     <div class="panel-body">
                         <div class="row">
                             <div class="form-content">
-                                <form>
+                                <form [formGroup]="form">
 
                                     <div class="input-field">
-                                        <input id="last_name" type="text" class="validate">
-                                        <label for="last_name" class="">Nhập mật khẩu cũ</label>
-                                    </div>
-
-                                    <div class="input-field">
-                                        <input id="last_name" type="text" class="validate">
-                                        <label for="last_name" class="">Nhập mật khẩu mới</label>
-                                    </div>
-
-                                    <div class="input-field">
-                                        <input id="last_name" type="text" class="validate">
-                                        <label for="last_name" class="">Xác nhận lại mật khẩu mới</label>
-                                    </div>
-
-                                    <!-- <div class="form-group">
-                                        <label for="confirmPassword">Confirm Password</label>
-                                        <input id="confirmPassword" type="text" 
-                                           lass="form-control"/>
-                                        <div *ngIf="profileFormControl.confirmPassword.errors 
-                                            && (profileFormControl.confirmPassword.touched || profileFormControl.confirmPassword.dirty)" 
-                                            class="text-danger">
-                                            <div *ngIf="profileFormControl.confirmPassword.errors.required" class="text-danger">
-                                                Confirm Password is required.
-                                            </div>
-                                            <div *ngIf="profileFormControl.confirmPassword.errors.minlength">
-                                                Confirm Password must be at least 6 characters long.
-                                            </div>
-                                            <div *ngIf="profileFormControl.confirmPassword.errors.containAllBlankCharacter">
-                                                Confirm Password must not be blank character.
-                                            </div>
-                                            <div *ngIf="profileFormControl.confirmPassword.errors.maxlength">
-                                                Confirm Password must be at less than 50 characters long.
-                                            </div>
-                                            <div *ngIf="profileFormControl.confirmPassword.errors.mustMatch">
-                                                Confirm Password does not match.
+                                        <input id="oldPassword" formControlName="oldPassword" type="password" class="validate">
+                                        <label for="oldPassword" class="">Nhập mật khẩu cũ</label>
+                                        <div *ngIf="formControl.oldPassword?.errors 
+                                            && (formControl.oldPassword?.touched || formControl.oldPassword?.dirty)">
+                                            <div *ngIf="formControl.oldPassword.errors?.required"  class="text-validate">
+                                                Bạn vui lòng nhập vào mật khẩu cũ có dạng chữ cái, số và ký tự đặc biệt.
                                             </div>
                                         </div>
-                                    </div> -->
-                                    <button class="btn btn-warning">Đổi mật khẩu</button>
+                                    </div>
+
+                                    <div class="input-field">
+                                        <input id="newPassword" formControlName="newPassword" type="password" class="validate">
+                                        <label for="newPassword" class="">Nhập mật khẩu mới</label>
+                                        <div *ngIf="formControl.newPassword?.errors 
+                                            && (formControl.newPassword?.touched || formControl.newPassword?.dirty)">
+                                            <div *ngIf="formControl.newPassword.errors?.required"  class="text-validate">
+                                                Bạn vui lòng nhập vào mật khẩu mới có dạng chữ cái, số và ký tự đặc biệt.
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="input-field">
+                                        <input id="confirmPassword" formControlName="confirmPassword" type="password" class="validate">
+                                        <label for="confirmPassword" class="">Xác nhận lại mật khẩu mới</label>
+                                        <div *ngIf="formControl.confirmPassword?.errors 
+                                            && (formControl.confirmPassword?.touched || formControl.confirmPassword?.dirty)">
+                                            <div *ngIf="formControl.confirmPassword.errors?.required"  class="text-validate">
+                                                Bạn vui lòng nhập vào mật khẩu mới có dạng chữ cái, số và ký tự đặc biệt.
+                                            </div>
+                                            <div *ngIf="formControl.confirmPassword.errors?.mustMatch"  class="text-validate">
+                                                Mật khẩu không khớp. Bạn vui lòng kiểm tra lại.
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <button class="btn btn-warning"  [disabled]="form.invalid" (click)="save()" >Đổi mật khẩu</button>
                                 </form>
                             </div>
                         </div>
