--- a/src/app/components/layout/profile/profile.component.html
+++ b/src/app/components/layout/profile/profile.component.html
@@ -26,10 +26,10 @@
                                     <td><div *ngFor="let role of profileInfo?.roleEntities">{{ role?.roleName }}</div></td>
                                 </tr>
                             </table>
-                            <div class="profile-action">
+                            <!-- <div class="profile-action">
                                 <button class="btn btn-warning" routerLinkActive="router-link-active"
                                 [routerLink]="['/profile/edit-profile']">Chỉnh sửa</button>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 <!-- End Form Elements -->
