--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -1,1 +1,25 @@
-<p>login works!</p>
+<div class="background-login">
+    <h1>Trang Admin</h1>
+    <div class="login-form">
+        <h2 class="tilte-login">Đăng nhập tại đây</h2>
+        <form [formGroup]="form">
+            <div class="login-form-group">
+                <label for="uname">Tài khoản:</label>
+                <div class="group">
+                    <i class="fa fa-user"></i>
+                    <input id="uname" formControlName="username" type="text" style="margin-bottom: 0;" placeholder="Username" 
+                    name="username"/>
+                </div>
+            </div>
+            <div class="login-form-group">
+                <label for="pass">Mật khẩu:</label>
+                <div class="group">
+                    <i class="fa fa-lock"></i>
+                    <input id="pass" formControlName="password" type="password" style="margin-bottom: 0;" placeholder="Password" 
+                    name="password"/>
+                </div>
+            </div>
+            <button type="button" class="btn-login" (click)="loginUser()" >Đăng nhập</button>
+        </form>
+    </div>
+</div>
