--- a/src/app/components/layout/account/account.component.html
+++ b/src/app/components/layout/account/account.component.html
@@ -1,63 +1,74 @@
-<div id="page-wrapper" >
-    <div class="header"> 
-                  <h1 class="page-header">
-                      Quản lý người dùng hệ thống
-                  </h1>
-            <!-- <ol class="breadcrumb">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Tables</a></li>
-                <li class="active">Data</li>
-            </ol>  -->
-                              
+<div id="page-wrapper">
+  <div class="header">
+    <h1 class="page-header">
+      Quản lý người dùng hệ thống
+    </h1>
+
   </div>
-  
-      <div id="page-inner"> 
-         
-      <div class="row">
-          <div class="col-md-12">
-              <!-- Advanced Tables -->
-              <div class="card">
-                  <div class="card-action">
-                       Danh sách người dùng
-                  </div>
-                  <div class="card-content">
-                      <div class="table-responsive">
-                          <table class="table table-striped table-bordered table-hover" id="dataTables-users">
-                              <thead>
-                                  <tr>
-                                      <th class="text-center">Tên đăng nhập</th>
-                                      <th class="text-center">Email</th>
-                                      <th class="text-center">Trạng thái</th>
-                                      <th class="text-center">Vai trò</th>
-                                      <th class="text-center">Thao tác</th>
-                                  </tr>
-                              </thead>
-                              <tbody>
-                                  <tr [class]="(i%2==0) ? 'odd gradeX' : 'even gradeX'" *ngFor="let account of accounts; let i = index" >
-                                      <td>{{ account?.username }}</td>
-                                      <td>{{ account?.email }}</td>
-                                      <td class="center">{{ account?.status }}</td>
-                                      <td>
-                                          <p *ngFor="let role of account?.roleEntities">{{ role?.roleName }} </p>
-                                      </td>
-                                      <td class="center section-action">
-                                        <i class="fa fa-eye text-info" title="xem chi tiết" aria-hidden="true"></i>
-                                        <i class="fa fa-pencil-square-o text-primary" title="chỉnh sửa" aria-hidden="true"></i>
-                                        <i class="fa fa-unlock text-warning" title="khóa tài khoản" aria-hidden="true"></i>
-                                        <i class="fa fa-trash-o text-danger" title="xóa tài khoản" aria-hidden="true"></i>
-                                      </td>
-                                  </tr>
-                              </tbody>
-                          </table>
-                      </div>
-                      
-                  </div>
-              </div>
-              <!--End Advanced Tables -->
+
+  <div id="page-inner">
+
+    <div class="row">
+      <div class="col-md-12">
+        <!-- Advanced Tables -->
+        <div class="card">
+          <div class="card-action">
+            Danh sách người dùng
           </div>
+          <div class="card-content row">
+            <div class="col-sm-6">
+              <div class="input-field">
+                <input id="search" type="text" [(ngModel)]="filter" name="filter" class="form-control input-sm">
+                <label for="search">Nhập tên thông tin cần tìm kiếm</label>
+              </div>
+              <div style="clear:both"></div>
+            </div>
+            <div class="add-item col-sm-6 text-right">
+              <button type="button" class="btn btn-warning" (click)="addAccount()">Thêm tài khoản</button>
+            </div>
+            <div class="table-responsive col-sm-12">
+              <table class="table table-striped table-bordered table-hover" id="dataTables-users">
+                <thead>
+                  <tr>
+                    <th class="text-center" style="cursor: pointer;" (click)="sort('username')">Tên đăng nhập</th>
+                    <th class="text-center" style="cursor: pointer;" (click)="sort('email')">Email</th>
+                    <th class="text-center" style="cursor: pointer;" (click)="sort('status')">Trạng thái</th>
+                    <th class="text-center" style="cursor: pointer;" (click)="sort('role')">Vai trò</th>
+                    <th class="text-center">Thao tác</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr [class]="(i%2==0) ? 'odd gradeX' : 'even gradeX'"
+                    *ngFor="let account of accounts | orderBy: key : reverse | filter:filter | paginate: { itemsPerPage: 10, currentPage: p }; let i = index">
+                    <td>{{ account?.username }}</td>
+                    <td>{{ account?.email }}</td>
+                    <td class="center">{{ account?.status }}</td>
+                    <td>
+                      <p *ngFor="let role of account?.roleEntities">{{ role?.roleName }} </p>
+                    </td>
+                    <td class="center section-action">
+                      <!-- <i class="fa fa-eye text-info" title="xem chi tiết" aria-hidden="true"></i>
+                      <i class="fa fa-pencil-square-o text-primary" title="chỉnh sửa" aria-hidden="true"></i>
+                      <i class="fa fa-unlock text-warning" title="khóa tài khoản" aria-hidden="true"></i> -->
+                      <i class="fa fa-trash-o text-danger" (click)="deleteAccount(account?.accountId)" title="xóa tài khoản" aria-hidden="true"></i>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <div class="col-sm-6 text-left">
+              <p>Tổng số bản ghi: {{ accounts?.length }}</p>
+            </div>
+            <div class="col-sm-6" style="text-align: right;">
+              <pagination-controls (pageChange)="p = $event"></pagination-controls>
+            </div>
+          </div>
+        </div>
+        <!--End Advanced Tables -->
       </div>
-          <!-- /. ROW  -->
     </div>
-       <!-- /. PAGE INNER  -->
+    <!-- /. ROW  -->
+  </div>
+  <!-- /. PAGE INNER  -->
 </div>
-   <!-- /. PAGE WRAPPER  -->
+<!-- /. PAGE WRAPPER  -->
