--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -34,7 +34,7 @@
         </li>
         <li><a [routerLink]="['/admin/change-password']"><i class="fa fa-gear fa-fw"></i> Đổi mật khẩu</a>
         </li>
-        <li><a href="#"><i class="fa fa-sign-out fa-fw"></i> Đăng xuất</a>
+        <li><a (click)="authService.logoutUser()"><i class="fa fa-sign-out fa-fw"></i> Đăng xuất</a>
         </li>
     </ul>
     <!-- <ul id="dropdown2" class="dropdown-content w250">
