--- a/src/app/components/layout/modal-position/modal-position.component.html
+++ b/src/app/components/layout/modal-position/modal-position.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>{{title}}</h2>
+<h2 mat-dialog-title class="text-uppercase text-center picker__list-item">{{title}}</h2>
 
 <mat-dialog-content>
   <form [formGroup]="form" class="form-horizontal">
