--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -17,7 +17,7 @@
 
         <ul class="nav navbar-top-links navbar-right">
             <li><a class="dropdown-button waves-effect waves-dark" data-activates="dropdown1"><i
-                class="fa fa-user fa-fw"></i> <b>John Doe</b> <i
+                class="fa fa-user fa-fw"></i> <b>Admin</b> <i
                 class="material-icons right">arrow_drop_down</i></a></li>
         </ul>
     </nav>
@@ -48,7 +48,7 @@
                         Quản lý vị trí công việc
                     </a>
                 </li>
-                <li>
+                <li class="active">
                     <a href="#" class="waves-effect waves-dark"><i class="fa fa-desktop"></i> 
                         Quản lý bài đăng<span class="fa arrow"></span></a>
                     <ul class="nav nav-second-level">
@@ -56,7 +56,10 @@
                             <a [routerLink]="['/admin/censor-job-post']" routerLinkActive="active-menu">Bài đăng chờ phê duyệt</a>
                         </li>
                         <li>
-                            <a [routerLink]="['/admin/job-post']" routerLinkActive="active-menu">Bài đăng đã phê duyệt</a>
+                            <a [routerLink]="['/admin/job-post']" [queryParams]="{ q: 'censored' }" routerLinkActive="active-menu">Bài đăng đã phê duyệt</a>
+                        </li>
+                        <li>
+                            <a [routerLink]="['/admin/job-post']" [queryParams]="{ q: 'expired' }" routerLinkActive="active-menu">Bài đăng đã hết hạn</a>
                         </li>
                     </ul>
                 </li>
